// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Organizers selectors Should return the classic organizers 1`] = `
[
  98,
  99,
  100,
]
`;

exports[`[STORE] - Organizers selectors Should return the mapped organizers 1`] = `
[
  {
    "block": false,
    "id": 98,
  },
  {
    "block": false,
    "id": 99,
  },
  {
    "block": true,
    "id": 100,
  },
]
`;

exports[`[STORE] - Organizers selectors Should return the organizer by clientId 1`] = `
{
  "organizer": 100,
}
`;

exports[`[STORE] - Organizers selectors Should return the organizer by clientId 2`] = `
{
  "organizer": 101,
}
`;

exports[`[STORE] - Organizers selectors Should return the organizer by clientId 3`] = `undefined`;

exports[`[STORE] - Organizers selectors Should return the organizers in a block 1`] = `
[
  100,
  101,
]
`;
